--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.2.6",
-        "tailwindcss": "^2.0.3",
-        "tailwindcss-plugins": "^0.3.0"
+        "tailwindcss": "^2.0.3"
     }
 }
