add automatic enquiry generation from facebook ad form leads; some other minor bug fixes

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+FB_WEBHOOK_VERIFY_TOKEN={your-verify-token}
+FB_ACCESS_TOKEN={your-page-access-token}
+
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
